# some-indexed-document-searcher

./: Cargo.toml  README.md
src/: config.rs  file_collector.rs  gui.rs  index_pdf.rs  indexer.rs  last_modified_cache.rs  main.rs  once_every.rs  searcher.rs
src/gui/: mod.rs
src/gui/widgets/: main.rs  mod.rs  search_result.rs
