[package]
name = "some-indexed-document-searcher"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.2.8"
tantivy = "0.9.1"
directories = "2.0.1"
snafu = "0.4.1"
config = "0.9.3"
serde = "1.0.94"
toml = "0.5.1"
serde_derive = "1.0.94"
glob = "0.3.0"
pdf-extract = "0.5.1"
failure = "0.1.5"
crossbeam-channel = "0.3.8"
num_cpus = "1.10.1"
ctrlc = "3.1.3"
sled = { version = "0.24.1", features = ["compression"] }
gtk = "0.7.0"
relm = "0.17.0"
relm-derive = "0.17.0"
relm-attributes = "0.16.0"
notify = "5.0.0-pre.1"
